# -Vaccine-News-Daily

./: .gitignore  README.md  agendamento.py  config.py  pyproject.toml  server.py  suporte.py  vaccine-news.py
-Vaccine-News-Daily/: requirements.txt  vaccine-news.py
-Vaccine-News-Daily/data/: artigos.json
-Vaccine-News-Daily/templates/: contato.html  cuidados.html  resultados.html
css/: carousel.css  estilo.css  menu.css
data/: artigos.json
html/: contato.html  index.html  noticias.html
js/: carousel.js  menu.js  suporte.js
migrations/versions/: 330b5a02dd40_.py  440b97634f3c_remover_restrições_de_unicidade.py  47d5110d497d_.py  5ff73c0b7ff2_.py  6cad384df933_ajustado_tamanho_da_linha_email.py  77fd79ef5204_.py  7cecea9733f2_.py  99a4e0cf7f29_renomear_coluna_usuario_para_cpf_cnpj.py  a0e90b3312a3_.py
projeto/: __init__.py  config.py  run.py  views.py
projeto/models/: agendamento_model.py  atestado_model.py  medico_model.py  receita_model.py  usuario.py
projeto/templates/: contato.html  index.html  template.html
static/css/: agendamento.css  atendimento.css  carousel.css  estilo.css  menu.css
static/js/: agendamento.js  atendimento.js  datahora.js  email.js  forum.js  mensagem_logado.js  menu.js  (+4 more)
templates/: agendamento.html  agendamento_online.html  agendamento_presencial.html  agendamentos.html  atendimento.html  cadastrar_medico.html  contato.html  cuidados.html  erro.html  forum.html  historico_consultas.html  index.html  inscrever.html  login.html  medicos.html  noticias.html  resultados.html  sobre.html  template.html  usuarios.html
(+6 files in other folders)
