[tool.poetry]
name = "vaccine-news-daily"
version = "0.1.0"
description = ""
authors = ["Panelinha da Una"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
mysql-client = "^0.0.1"
Flask-MySQL = "^1.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
